<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.fhict.org.csi_week_1.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@android:color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/hacker"
            android:layout_gravity="top" />

        <ListView
            android:id="@+id/crimeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <TableRow
            android:background="#690c5029"
            android:layout_marginBottom="10px">
            <TextView
                android:id="@+id/nameText"
                style="@style/greenTableRowTextview"
                android:text="@string/nameText" />
            <TextView android:id="@+id/name"
                style="@style/greenTableRowTextview"
                android:text="@string/name"/>
        </TableRow>
        <TableRow
            android:background="#690c5029"
            android:layout_marginBottom="10px">
            <TextView
                android:id="@+id/genderText"
                style="@style/greenTableRowTextview"
                android:text="@string/genderText"/>
            <TextView android:id="@+id/gender"
                style="@style/greenTableRowTextview"
                android:text="@string/gender"/>
        </TableRow>
        <TableRow
            android:background="#690c5029"
            android:layout_marginBottom="10px">
            <TextView
                android:id="@+id/ageText"
                style="@style/greenTableRowTextview"
                android:text="@string/ageText"/>
            <TextView android:id="@+id/age"
                style="@style/greenTableRowTextview"
                android:text="@string/age"/>
        </TableRow>
        <TableRow
            android:background="#690c5029">
            <TextView
                android:id="@+id/bountyText"
                style="@style/greenTableRowTextview"
                android:text="@string/bountyText"/>
            <TextView android:id="@+id/bounty"
                style="@style/greenTableRowTextview"
                android:text="@string/bounty"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detailsText"
            android:gravity="center"
            android:textColor="@color/greenishh"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/details"
                android:textColor="@color/greenishh"/>
        </ScrollView>
        <Button
            android:id="@+id/button1"
            style="@style/buttonCenterStyleLinear"
            android:text="@string/button1Text" />
    </LinearLayout>
    </LinearLayout>
