<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csi.fhict.org.csi_week_1.ReportActivity"
    tools:showIn="@layout/activity_report">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            style="@style/buttonLeftStyle"
            android:text="@string/button2Text"
            />

        <Button
            android:id="@+id/button3"
            style="@style/buttonRightStyle"
            android:text="@string/button3Text" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageReport"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/description"
        android:src="@drawable/hacker"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lineshape">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button4"
            style="@style/buttonCenterStyle"
            android:text="@string/button4Text"/>

        <Button
            android:id="@+id/buttonBack"
            android:layout_below="@+id/button4"
            style="@style/buttonLeftStyle"
            android:text="@string/buttonBackText"/>

        <Button
            android:id="@+id/buttonSend"
            style="@style/buttonRightStyle"
            android:layout_below="@+id/button4"
            android:text="@string/buttonSendText"/>
    </RelativeLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SCA Switch"
        android:id="@+id/scaSwitch"
        android:gravity="center_horizontal"/>


</LinearLayout>
